[gd_scene load_steps=2 format=3 uid="uid://bg2g8kjaltf5l"]

[ext_resource type="Script" uid="uid://cgd5tvynjb8kk" path="res://scenes/main_menu.gd" id="1_l6cm7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -23.5
offset_right = 20.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="CroakerInfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
